Fixed next/prev photo buttons, expanded photo captions, and stretched bg image

--- a/assets/css/_general.scss
+++ b/assets/css/_general.scss
@@ -1,6 +1,3 @@
-//Hide Screen 1 and Screen 2 on page load
-.albums-container {
-}
 .album-expanded, nav {
   display:none;
 }
@@ -9,6 +6,9 @@
 }
 nav {
   overflow-y:hidden;
+}
+html {
+  overflow:hidden;
 }
 
 body {
@@ -26,9 +26,9 @@ body:before {
   right: 0;
   z-index: -1;
   display:block;
-  background-size:cover;
-  width:100%;
-  height:100%;
+  background-size:100% 100%;
+  width:120%;
+  height:120%;
   -webkit-filter: blur(15px);
   filter: blur(15px);
 }
