--- a/assets/css/compiled.css
+++ b/assets/css/compiled.css
@@ -42,6 +42,9 @@ p {
 nav {
   overflow-y: hidden; }
 
+html {
+  overflow: hidden; }
+
 body {
   position: fixed;
   left: 0;
@@ -56,9 +59,9 @@ body:before {
   right: 0;
   z-index: -1;
   display: block;
-  background-size: cover;
-  width: 100%;
-  height: 100%;
+  background-size: 100% 100%;
+  width: 120%;
+  height: 120%;
   -webkit-filter: blur(15px);
   filter: blur(15px); }
 
@@ -68,7 +71,7 @@ body:before {
   right: 0;
   z-index: 1;
   display: block;
-  background-image: url("http://666a658c624a3c03a6b2-25cda059d975d2f318c03e90bcf17c40.r92.cf1.rackcdn.com/unsplash_527bf56961712_1.JPG");
+  background-image: url('http://666a658c624a3c03a6b2-25cda059d975d2f318c03e90bcf17c40.r92.cf1.rackcdn.com/unsplash_527bf56961712_1.JPG');
   width: 1200px;
   height: 800px;
   -webkit-filter: blur(5px);
@@ -243,6 +246,8 @@ nav {
       .photo-expanded .photo-nav-buttons a:hover {
         color: green;
         border-color: green; }
+      .photo-expanded .photo-nav-buttons a:active {
+        color: light(green, 20%); }
     .photo-expanded .photo-nav-buttons a:first-child {
       margin-right: 10px; }
       .photo-expanded .photo-nav-buttons a:first-child:hover {
@@ -254,5 +259,3 @@ nav {
 
 .active {
   display: block; }
-
-/*# sourceMappingURL=compiled.css.map */
